--- a/woosh-photo-app/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/woosh-photo-app/en.lproj/MainStoryboard_iPhone.storyboard
@@ -12,10 +12,10 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="IvD-Nt-aNt">
+                            <imageView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IvD-Nt-aNt">
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="z7e-cf-Img">
+                            <navigationBar contentMode="top" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="z7e-cf-Img">
                                 <items>
                                     <navigationItem title="Woosh" id="CCR-5Q-tUK">
                                         <barButtonItem key="leftBarButtonItem" systemItem="camera" id="bGn-M7-aVx">
@@ -23,9 +23,9 @@
                                                 <action selector="selectPhotographButtonTapped:" destination="2" id="Clj-bm-Kuc"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Clear" id="SYz-ew-TJz">
+                                        <barButtonItem key="rightBarButtonItem" title="Scan" id="SYz-ew-TJz">
                                             <connections>
-                                                <action selector="clearPhoto:" destination="2" id="fjt-78-c9J"/>
+                                                <action selector="scanOrClearPhoto:" destination="2" id="2la-wa-OLI"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -47,6 +47,7 @@
                     <navigationItem key="navigationItem" title="Title" id="KSX-ON-jen"/>
                     <connections>
                         <outlet property="imgView" destination="IvD-Nt-aNt" id="W3w-kM-dgN"/>
+                        <outlet property="scanOrClearButton" destination="SYz-ew-TJz" id="glj-ux-bLV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
@@ -117,9 +118,10 @@
         <class className="FirstViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FirstViewController.h"/>
             <relationships>
-                <relationship kind="action" name="clearPhoto:"/>
+                <relationship kind="action" name="scanOrClearPhoto:"/>
                 <relationship kind="action" name="selectPhotographButtonTapped:"/>
                 <relationship kind="outlet" name="imgView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="scanOrClearButton" candidateClass="UIBarButtonItem"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
