--- a/woosh-photo-app/LoginViewController.xib
+++ b/woosh-photo-app/LoginViewController.xib
@@ -49,7 +49,7 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="934419762"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<float key="IBUIAlpha">0.25</float>
+						<float key="IBUIAlpha">0.44999998807907104</float>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -150,9 +150,11 @@
 							<bytes key="NSWhite">MAA</bytes>
 							<reference key="NSCustomColorSpace" ref="55328004"/>
 						</object>
+						<bool key="IBUIClearsOnBeginEditing">YES</bool>
 						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 						<float key="IBUIMinimumFontSize">17</float>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+							<bool key="IBUISecureTextEntry">YES</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="922329125"/>
@@ -197,7 +199,6 @@
 						<string key="NSFrame">{{20, 443}, {280, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -220,7 +221,6 @@
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -669,11 +669,11 @@
 							</object>
 							<reference ref="376593235"/>
 							<reference ref="242954192"/>
-							<reference ref="204381516"/>
 							<reference ref="787678971"/>
 							<reference ref="841280851"/>
 							<reference ref="908527232"/>
 							<reference ref="934419762"/>
+							<reference ref="204381516"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
